--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Animals, Mythical'
 - !lcc 'QL'
 - !lcsh 'Animal behavior'
+- GITenberg
 tableOfContents: 'Introductory: curiosities of zoology -- The Rhinoceros in England
   -- Stories of Mermaids -- Is the Unicorn fabulous? -- The Mole at home -- The great
   Ant-Bear -- Curiosities of Bats -- The Hedgehog -- The Hippopotamus in England --
